# SDL_project

./: 2q  CMakeLists.txt  Enemy.cpp  Enemy.h  Game.cpp  Game.h  GameObject.h  InputHandler.cpp  InputHandler.h  LoaderParams.h  Makefile  ObjectBehaviour.cpp  ObjectBehaviour.h  Player.cpp  Player.h  README.md  SDL.files  TextureManager.cpp  TextureManager.h  Vector2D.h  main  main.cpp  sdl.files  sdl.includes
assets/: .directory  map1.tmx
backup/: Game.cpp  Game.h
backup/gameObjects/: Enemy.cpp  Enemy.h  Game.cpp  Game.h  GameObject.cpp  GameObject.h  Makefile  Player.cpp  Player.h  TextureManager.cpp  TextureManager.h  main.cpp
